# colorice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/colorice/: __init__.py  __main__.py  cache.py  cli.py  config.py  contrast.py  display.py  extraction.py  init_templates.py  moods.py  oklab.py  palette.py  paths.py  scheme.py
src/colorice/data/: config.toml
src/colorice/data/templates/: airline-theme.vim  alacritty.toml  cava.conf  colors.sh  dunst.conf  foot.ini  ghostty  hyprland-colors.conf  i3-colors.conf  kitty.conf  mako.conf  neovim-colors.lua  picom.conf  polybar-colors.ini  rofi-colors.rasi  sway-colors.conf  swaylock.conf  vim-colors.vim  waybar-colors.css  wezterm-colors.lua  xresources  zellij-theme.kdl
src/colorice/templates/: __init__.py  applicator.py  pywal_compat.py  variables.py
tests/: conftest.py  test_applicator.py  test_config.py  test_contrast.py  test_extraction.py  test_moods.py  test_oklab.py  test_palette.py  test_scheme.py  test_template_render.py  test_variables.py
