[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colorice"
version = "0.1.0"
description = "Generate terminal color schemes from wallpaper images"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
]

[project.scripts]
colorice = "colorice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colorice = ["data/templates/*"]

[project.optional-dependencies]
segment = [
    "scikit-image>=0.22",
]
dev = [
    "pytest>=7.0",
    "scikit-image>=0.22",
]
