[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colorice"
version = "0.1.0"
description = "Perceptually accurate wallpaper-to-rice color scheme generator"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
authors = [
    { name = "rattle99", email = "rattle99@users.noreply.github.com" },
]
keywords = ["color-scheme", "wallpaper", "terminal", "theming", "pywal", "oklab", "rice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.24",
    "Pillow>=10.0",
    "scikit-learn>=1.3",
    "scikit-image>=0.22",
]

[project.urls]
Homepage = "https://github.com/rattle99/colorice"
Repository = "https://github.com/rattle99/colorice"
Issues = "https://github.com/rattle99/colorice/issues"

[project.scripts]
colorice = "colorice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colorice = ["data/config.toml", "data/templates/*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
